--- a/tmux.conf
+++ b/tmux.conf
@@ -32,3 +32,6 @@ set -g status-right '#[fg=green]%d/%m/%Y #[fg=yellow]%H:%M  #[default]'
 set-window-option -g window-status-current-bg red
 set-window-option -g window-status-current-fg white
 
+# START
+new-session -s greg -n root 'su -'
+new-window -d -n greg -t greg
