Added mouse support in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,9 @@ bind r source-file ~/.tmux.conf
 set -g default-terminal "screen-256color"
 set -g history-limit 1000
 
+# set aggressive resize by default
+ setw -g aggressive-resize
+
 # THEME
 set -g status-bg white
 set -g status-fg blue
@@ -35,3 +38,8 @@ set-window-option -g window-status-current-fg white
 # START
 new-session -s greg -n root 'su -'
 new-window -d -n greg -t greg
+
+# MOUSE SUPPORT
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-window-option -g mode-mouse on
