--- a/tmux.conf
+++ b/tmux.conf
@@ -40,6 +40,6 @@ new-session -s greg -n root 'su -'
 new-window -d -n greg -t greg
 
 # MOUSE SUPPORT
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-window-option -g mode-mouse on
