--- a/tmux.conf
+++ b/tmux.conf
@@ -23,17 +23,16 @@ set -g default-terminal "screen-256color"
 set -g history-limit 1000
 
 # set aggressive resize by default
- setw -g aggressive-resize
+setw -g aggressive-resize
 
 # THEME
 set -g status-bg white
-set -g status-fg blue
+set -g status-fg yellow
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-left '[#[fg=yellow]#H#[default]] #(cut -d " " -f 1-3 /proc/loadavg) |'
+set -g status-left '#[fg=blue][#[fg=green]#H#[fg=blue]] #(cut -d " " -f 1-3 /proc/loadavg) #[default] //'
 set -g status-right '#[fg=green]%d/%m/%Y #[fg=yellow]%H:%M  #[default]'
-set-window-option -g window-status-current-bg red
-set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-style bg=red
 
 # MOUSE SUPPORT
 #set-option -g mouse-select-pane on
